--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/router": "^20.1.0",
     "@angular/ssr": "^20.1.3",
     "express": "^5.1.0",
+    "ngx-cookie-service": "^20.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
