--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "express": "^5.1.0",
     "ngx-cookie-service": "^20.0.1",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@angular/build": "^20.1.3",
